snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/maven-metadata.xml.sha256
5ddeca4fd8bb34c01573b0dfda77792943652bc4de58c4f95fa1706dec89c5fc